	# can we improve arrayfire mnist results by using external kernels for xentloss and relu?  find better xentloss design.  using quadloss for now.
	# profile ArrayFire.
	# read ArrayFire docs.
	# find ArrayFire kernels. can we use arrayfire kernels outside?  (matmul, broadcast and reduce). They are built by JIT!

	* TODO8:
	# test cuda version compare with af.
	# can we get AF kernels to dump out?
	# try c++ ArrayFire mnist example?
	# should we introduce our own CudaArray type?
	# will arrayfire memory management still work with rnns?
	# eventually look at arrayfire convolution.
	# thrust and tensorflow also opensource.
	# we could just support 0,1,2 dims or 0,1,N dims for map and reduce.
	# JIT compile kernels as needed: https://blog.maleadt.net/2015/01/15/julia-cuda/
	## http://docs.nvidia.com/cuda/nvrtc/index.html#basic-usage
	## http://docs.nvidia.com/cuda/cuda-c-programming-guide/index.html#mathematical-functions-appendix

2016-08-25  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# Finish math.jl in AutoGrad.
	# - Implement broadcast1 for sin,cos etc. - arrayfire?
	# - Take a look at Julia broadcast implementation. - arrayfire?
	# - Implement 2+arg broadcasting better than CUDNN. - arrayfire?

	# ArrayFire may do these better!!!
	## It does memory management: https://arrayfire.com/forums/viewtopic.php?f=17&t=43223
	## Can it be extended with missing functions?  Can we write new kernels?
	## Can we run CUDNN code on it?
	## Try sending AFArrays to libknet kernels or CUDNN functions to see.
	## Benchmark comparing it to CUBLAS and CUDNN.
	## Figure out the bug in the mnist example.
	## http://arrayfire.com/custom-kernels-with-arrayfire/
	## http://arrayfire.com/arrayfire-cuda-interoperability/

	# ArrayFire should have {T,N} instead of {T,4} but:
	## ambiguity for ^ need to be fixed.
	## display for vectors broken.
	## zeros(AF) gives regular array.

	# ERROR: ArrayFire Error (101) : Device out of memory